--- a/index.html
+++ b/index.html
@@ -2951,7 +2951,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="top_menu hidden-ms hidden-xs">
       
-        <a class="navbar-brand" href="https://www.digitmakers.ca/" itemprop="url"><img src="../image%20(1).png" alt="" width="700" height="89" class="img-responsive">
+        <a class="navbar-brand" href="https://www.digitmakers.ca/" itemprop="url"><img src="./assets/digitmakerscom.png" alt="" width="700" height="89" class="img-responsive">
         </a>
       
     </div>
